--- a/MvpModules/Bailan/src/main/res/values/colors.xml
+++ b/MvpModules/Bailan/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
 	<color name="colorPrimaryDark">#303F9F</color>
 	<color name="colorAccent">#FF4081</color>
 	<color name="c_ff007dff">#ff007dff</color>
-	<color name="c_0091ea">#0091ea</color>
+	<color name="c_0091ea">#0091EA</color>
 </resources>
