--- a/MvpModules/Bailan/src/main/res/layout/layout_item_category_list.xml
+++ b/MvpModules/Bailan/src/main/res/layout/layout_item_category_list.xml
@@ -2,14 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_marginBottom="@dimen/dp_1"
+                android:layout_height="wrap_content">
 
     <com.example.bailan.widget.MenuWidget
             android:id="@+id/mw_item_category"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_45"
+            android:layout_height="@dimen/dp_65"
             android:background="@color/white"
             android:gravity="center_vertical"
+            app:showLeftIcon="true"
             app:Title="预约新游"
             app:showDivider2="true"
             app:hideSubTitle="true"/>
