--- a/MvpModules/Bailan/src/main/res/layout/layout_item_recommend_ad.xml
+++ b/MvpModules/Bailan/src/main/res/layout/layout_item_recommend_ad.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_120"
-    android:background="@drawable/list_bg"
-    android:paddingBottom="@dimen/dp_2"
-    android:paddingLeft="@dimen/dp_15"
-    android:paddingRight="@dimen/dp_15"
-    android:paddingTop="@dimen/dp_2">
+              android:layout_width="match_parent"
+              android:layout_height="@dimen/dp_90"
+              android:background="@color/white"
+              android:paddingBottom="@dimen/dp_2"
+              android:paddingLeft="@dimen/dp_15"
+              android:paddingRight="@dimen/dp_15"
+              android:layout_marginTop="@dimen/dp_2"
+              android:paddingTop="@dimen/dp_2">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/iv1_item_list_recommend"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/image_sll_h" />
+                android:id="@+id/iv1_item_list_recommend"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/image_sll_h"/>
 
         <ImageView
-            android:id="@+id/iv2_item_list_recommend"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_weight="1"
-            android:src="@drawable/image_sll_h" />
+                android:id="@+id/iv2_item_list_recommend"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_weight="1"
+                android:src="@drawable/image_sll_h"/>
     </LinearLayout>
 </LinearLayout>
