--- a/MvpModules/Bailan/src/main/res/layout/layout_menu_widget.xml
+++ b/MvpModules/Bailan/src/main/res/layout/layout_menu_widget.xml
@@ -1,73 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:paddingBottom="@dimen/dp_5"
-                android:paddingLeft="@dimen/dp_10"
-                android:paddingRight="@dimen/dp_10"
-                android:paddingTop="@dimen/dp_5">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="center_vertical"
+              android:orientation="vertical">
 
-    <ImageView
-            android:id="@+id/ic_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/ic_right"/>
-
-    <ImageView
-            android:id="@+id/ic_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/icon_phone"
-            android:visibility="gone"/>
-
-
-    <LinearLayout
-            android:id="@+id/ll_cont"
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_marginRight="@dimen/dp_5"
-            android:layout_toLeftOf="@id/ic_right"
-            android:layout_toRightOf="@id/ic_left"
-            android:orientation="vertical">
+            android:paddingLeft="@dimen/dp_10"
+            android:paddingRight="@dimen/dp_10"
+            android:paddingTop="@dimen/dp_5"
+            android:paddingBottom="@dimen/dp_5"
+            android:layout_height="wrap_content">
 
-        <TextView
-                android:id="@+id/tv_title"
+        <ImageView
+                android:id="@+id/ic_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/ic_right"/>
+
+        <ImageView
+                android:id="@+id/ic_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:visibility="gone"/>
+
+        <LinearLayout
+                android:id="@+id/ll_cont"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="标题"
-                android:textColor="@color/black"
-                android:textSize="@dimen/dp_18"/>
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:layout_marginRight="@dimen/dp_5"
+                android:layout_toLeftOf="@id/ic_right"
+                android:layout_toRightOf="@id/ic_left"
+                android:orientation="vertical">
 
-        <TextView
-                android:id="@+id/tv_sub_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_3"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="子标题"
-                android:textColor="@color/gray"
-                android:textSize="@dimen/dp_14"/>
+            <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="标题"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/dp_18"/>
 
-    </LinearLayout>
+            <TextView
+                    android:id="@+id/tv_sub_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_3"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="子标题"
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/dp_14"/>
+
+        </LinearLayout>
+    </RelativeLayout>
 
     <View
             android:id="@+id/v_divider2"
             android:layout_width="match_parent"
-            android:layout_alignLeft="@id/ll_cont"
             android:layout_height="@dimen/dp_1"
             android:visibility="gone"
-            android:layout_alignParentBottom="true"
-            android:layout_alignRight="@id/ic_right"
-            android:background="@color/lightgray"
+            android:layout_marginRight="@dimen/dp_5"
+            android:background="@color/c_ececec"
             />
-</RelativeLayout>
+</LinearLayout>
