--- a/ToolAppModule/VideoRecorder/src/main/res/layout/activity_main.xml
+++ b/ToolAppModule/VideoRecorder/src/main/res/layout/activity_main.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/dp_10"
         tools:context="com.example.vrec.MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <Button
+            android:id="@+id/btn_action_capture"
+            android:layout_width="match_parent"
+            android:text="拍照"
+            android:layout_height="wrap_content"/>
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+            android:id="@+id/btn_action_record"
+            android:layout_width="match_parent"
+            android:text="录视频"
+            android:layout_height="wrap_content"/>
+
+</LinearLayout>
