--- a/ToolAppModule/VideoRecorder/src/main/res/layout/actiivty_camera_video_record.xml
+++ b/ToolAppModule/VideoRecorder/src/main/res/layout/actiivty_camera_video_record.xml
@@ -9,12 +9,38 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-    <Button
-            android:id="@+id/btn_record"
-            android:layout_width="wrap_content"
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/dp_40"
-            android:text="录制"
-            android:layout_height="wrap_content"/>
+            android:background="#80ffffff"
+            android:padding="10dp">
+
+        <!-- 开始/结束 录制按钮 -->
+        <ImageView
+                android:id="@+id/record_control"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerInParent="true"
+                android:onClick="startRecord"
+                android:src="@drawable/recordvideo_start"/>
+
+        <ImageView
+                android:id="@+id/record_pause"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
+                android:onClick="stopRecord"
+                android:src="@drawable/control_pause"
+                android:visibility="gone"/>
+
+        <Chronometer
+                android:id="@+id/record_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:format="%s"/>
+
+    </RelativeLayout>
 </RelativeLayout>
