--- a/ToolAppModule/VideoRecorder/src/main/res/layout/activity_main.xml
+++ b/ToolAppModule/VideoRecorder/src/main/res/layout/activity_main.xml
@@ -20,4 +20,10 @@
             android:text="录视频"
             android:layout_height="wrap_content"/>
 
+    <Button
+            android:id="@+id/btn_action_play"
+            android:layout_width="match_parent"
+            android:text="播放视频"
+            android:layout_height="wrap_content"/>
+
 </LinearLayout>
