--- a/ToolAppModule/VideoRecorder/src/main/res/layout/activity_video_player.xml
+++ b/ToolAppModule/VideoRecorder/src/main/res/layout/activity_video_player.xml
@@ -10,7 +10,41 @@
             android:id="@+id/video_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_gravity="center"/>
 
-    </com.example.vrec.widget.MyVideoView>
+    <LinearLayout
+            android:layout_width="@dimen/dp_85"
+            android:orientation="vertical"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="@dimen/dp_15"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:id="@+id/tv_opt_f2t"
+                android:layout_width="match_parent"
+                android:text="4:3"
+                android:gravity="center"
+                android:background="@drawable/selector_menu_item"
+                android:layout_height="@dimen/dp_40"/>
+
+        <TextView
+                android:id="@+id/tv_opt_s2n"
+                android:layout_width="match_parent"
+                android:text="16:9"
+                android:gravity="center"
+                android:background="@drawable/selector_menu_item"
+                android:layout_marginTop="@dimen/dp_5"
+                android:layout_height="@dimen/dp_40"/>
+
+        <TextView
+                android:id="@+id/tv_opt_ascale"
+                android:layout_width="match_parent"
+                android:text="自适应"
+                android:gravity="center"
+                android:background="@drawable/selector_menu_item"
+                android:layout_marginTop="@dimen/dp_5"
+                android:layout_height="@dimen/dp_40"/>
+
+    </LinearLayout>
+
 </FrameLayout>
