Data Binding demo练习

--- a/ImoocModules/ImoocDataBinding/src/main/res/layout/include_demo.xml
+++ b/ImoocModules/ImoocDataBinding/src/main/res/layout/include_demo.xml
@@ -11,7 +11,7 @@
 
         <variable
                 name="dPresenter"
-                type="com.example.idb.MainActivity.MethodCiteBindPresenter"/>
+                type="com.example.idb.SampleActivity.MethodCiteBindPresenter"/>
     </data>
 
     <LinearLayout
