--- a/ImoocModules/ImoocDataBinding/src/main/res/layout/activity_sample.xml
+++ b/ImoocModules/ImoocDataBinding/src/main/res/layout/activity_sample.xml
@@ -3,17 +3,17 @@
 
     <data>
 
-        <import type="com.example.idb.User" />
+        <import type="com.example.idb.bean.User" />
 
         <import type="android.view.View" />
 
         <variable
             name="userData"
-            type="com.example.idb.User" />
+            type="com.example.idb.bean.User" />
 
         <variable
             name="dPresenter"
-            type="com.example.idb.SampleActivity.MethodCiteBindPresenter" />
+            type="com.example.idb.ui.activity.SampleActivity.MethodCiteBindPresenter" />
     </data>
 
     <LinearLayout
