--- a/ImoocModules/ImoocDataBinding/src/main/res/layout/activity_list_sample.xml
+++ b/ImoocModules/ImoocDataBinding/src/main/res/layout/activity_list_sample.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="listsamplepresenter"
-            type="com.example.idb.ListSampleActivity.ListSamplePresenter" />
+            type="com.example.idb.ui.activity.ListSampleActivity.ListSamplePresenter" />
     </data>
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/dp_15"
-        tools:context=".ListSampleActivity">
+        tools:context=".ui.activity.ListSampleActivity">
 
         <Button
             android:layout_width="match_parent"
