--- a/ImoocModules/ImoocDataBinding/src/main/res/layout/include_demo.xml
+++ b/ImoocModules/ImoocDataBinding/src/main/res/layout/include_demo.xml
@@ -3,15 +3,15 @@
 
     <data>
 
-        <import type="com.example.idb.User"/>
+        <import type="com.example.idb.bean.User"/>
 
         <variable
                 name="userData"
-                type="com.example.idb.User"/>
+                type="com.example.idb.bean.User"/>
 
         <variable
                 name="dPresenter"
-                type="com.example.idb.SampleActivity.MethodCiteBindPresenter"/>
+                type="com.example.idb.ui.activity.SampleActivity.MethodCiteBindPresenter"/>
     </data>
 
     <LinearLayout
