--- a/ImoocModules/ImoocDataBinding/src/main/res/layout/layout_item_fire_off.xml
+++ b/ImoocModules/ImoocDataBinding/src/main/res/layout/layout_item_fire_off.xml
@@ -5,7 +5,7 @@
 
         <variable
                 name="useritem"
-                type="com.example.idb.User"
+                type="com.example.idb.bean.User"
                 />
 
         <variable
