--- a/RxJava2X/src/main/res/layout/activity_main.xml
+++ b/RxJava2X/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
+        tools:context=".activity.MainActivity"
         >
 
     <android.support.v4.widget.NestedScrollView
@@ -24,13 +24,14 @@
                     android:id="@+id/btn_action_0"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_45"
-                    android:text="基础使用"
+                    android:text="基础使用-1"
                     />
 
             <Button
                     android:id="@+id/btn_action_1"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_45"
+                    android:text="基础使用-2"
                     />
 
             <Button
