--- a/RxJava2X/src/main/res/layout/activity_sample01.xml
+++ b/RxJava2X/src/main/res/layout/activity_sample01.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/dp_15"
-        tools:context=".Sample01Activity"
+        tools:context=".activity.Sample01Activity"
         >
 
     <android.support.v4.widget.NestedScrollView
