--- a/RxJava2X/src/main/res/layout/content_sample01.xml
+++ b/RxJava2X/src/main/res/layout/content_sample01.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_sample01"
-        tools:context=".Sample01Activity"
+        tools:context=".activity.Sample01Activity"
         >
 
 </android.support.constraint.ConstraintLayout>
